fix header background on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,8 +90,6 @@ a{
 	margin: 0 auto;	
 	border-bottom: 1px solid #ead3fd;
 	padding: 0 25px 20px;
-
-
 }
 
 .reason p{
@@ -212,8 +210,14 @@ a.colorize:hover{
 	}	
 }
 
-@media all and (max-width: 745px){
+@media all and (max-width: 768px){
+	#header{
+		background-attachment: scroll;
+		background-position: left center;
+	}
+}
 
+@media all and (max-width: 745px){
 	h1{
 		font-size: 30px;
 		margin-top: 0px;
